--- a/.github/workflows/create-release-candidate.yml
+++ b/.github/workflows/create-release-candidate.yml
@@ -7,6 +7,7 @@ on:
   workflow_dispatch:
 
 permissions:
+  contents: write
   pull-requests: write
 
 jobs:
@@ -22,6 +23,7 @@ jobs:
         with:
           push: true
           changelog_increment_filename: /tmp/changelog.md
+          github_token: ${{ github.token }}
       - name: Create release PR
         uses: peter-evans/create-pull-request@v7
         with:
