--- a/.github/workflows/create-release-candidate.yml
+++ b/.github/workflows/create-release-candidate.yml
@@ -17,6 +17,10 @@ jobs:
       - uses: actions/checkout@v4
         # with:
         #   ref: develop
+      - name: Check tags
+        shell: bash
+        run: |
+          git tag
       - name: Calculate version bump
         id: commitizen
         uses: commitizen-tools/commitizen-action@master
