--- a/.github/workflows/create-release-candidate.yml
+++ b/.github/workflows/create-release-candidate.yml
@@ -25,9 +25,9 @@ jobs:
         id: commitizen
         uses: commitizen-tools/commitizen-action@master
         with:
-          push: true
+          push: false
           changelog_increment_filename: /tmp/changelog.md
-          github_token: ${{ github.token }}
+          # github_token: ${{ github.token }}
       - name: Create release PR
         uses: peter-evans/create-pull-request@v7
         with:
