fix: use tmp path

--- a/.github/workflows/create-release-candidate.yml
+++ b/.github/workflows/create-release-candidate.yml
@@ -25,7 +25,7 @@ jobs:
         uses: commitizen-tools/commitizen-action@master
         with:
           push: false
-          changelog_increment_filename: body.md
+          changelog_increment_filename: /tmp/body.md
       - name: Create release PR
         uses: peter-evans/create-pull-request@v7
         with:
@@ -34,4 +34,4 @@ jobs:
           labels: release
           delete-branch: false
           title: "Release v${{ steps.commitizen.outputs.version }}"
-          body-path: body.md
+          body-path: /tmp/body.md
