--- a/.github/workflows/create-release-candidate.yml
+++ b/.github/workflows/create-release-candidate.yml
@@ -30,7 +30,9 @@ jobs:
           changelog_increment_filename: body.md
       - name: Store changelog output
         id: changelog
-        run: echo "content=$(cat body.md)" >> $GITHUB_OUTPUT
+        run: |
+          echo "content='$(cat body.md)'" >> $GITHUB_OUTPUT
+          rm body.md
       - name: Print changelog increment
         shell: bash
         run: cat /tmp/body.md
