fix: output attempt

--- a/.github/workflows/create-release-candidate.yml
+++ b/.github/workflows/create-release-candidate.yml
@@ -31,7 +31,7 @@ jobs:
       - name: Store changelog
         id: changelog
         run: |
-          echo "version=$(cat body.md)" >> $GITHUB_OUTPUT
+          echo "content='$(cat body.md)'" >> $GITHUB_OUTPUT
           rm body.md
       - name: Create release PR
         uses: peter-evans/create-pull-request@v7
