--- a/.github/workflows/create-release-candidate.yml
+++ b/.github/workflows/create-release-candidate.yml
@@ -24,7 +24,7 @@ jobs:
           mkdir -p ${{ runner.temp }}
       - name: Calculate version bump
         id: commitizen
-        uses: commitizen-tools/commitizen-action
+        uses: commitizen-tools/commitizen-action@master
         with:
           dry_run: true
           push: false
