--- a/.github/workflows/create-github-release.yml
+++ b/.github/workflows/create-github-release.yml
@@ -1,7 +1,9 @@
-name: Create Release Candidate
+name: Create GitHub release
 
 on:
-  workflow_dispatch:
+  push:
+    branches:
+      - master
 
 permissions:
   contents: write
@@ -29,3 +31,12 @@ jobs:
           tag_name: ${{ steps.commitizen.outputs.version }}
         env:
           GITHUB_TOKEN: ${{ github.token }}
+      - name: Backmerge to develop
+        shell: bash
+        run: |
+          git config --global user.name "${{ env.GIT_AUTHOR_NAME }}"
+          git config --global user.email "${{ env.GIT_AUTHOR_EMAIL }}"
+          git fetch origin develop:develop
+          git checkout develop
+          git merge origin/main -Xours
+          git push origin HEAD:develop
