fix: push backmerge

--- a/.github/workflows/create-github-release.yml
+++ b/.github/workflows/create-github-release.yml
@@ -36,3 +36,4 @@ jobs:
           git fetch origin develop
           git checkout develop
           git merge origin/main -X ours --no-edit || exit 1
+          git push origin develop
