fix: gh push permissions

--- a/.github/workflows/create-github-release.yml
+++ b/.github/workflows/create-github-release.yml
@@ -38,3 +38,5 @@ jobs:
           git pull origin develop
           git merge main -X ours
           git push origin develop
+        env:
+          GH_TOKEN: ${{ github.token }}
