--- a/.github/workflows/create-github-release.yml
+++ b/.github/workflows/create-github-release.yml
@@ -33,10 +33,9 @@ jobs:
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "noreply@mercedes-benz.com"
-          git pull origin main
           git checkout develop
-          git pull origin develop
-          git merge main -X ours --no-ff
-          git push origin develop
+          git pull
+          git merge ${{ steps.commitizen.outputs.version }} -X ours --no-ff
+          git push
         env:
           GH_TOKEN: ${{ github.token }}
