--- a/.github/workflows/create-github-release.yml
+++ b/.github/workflows/create-github-release.yml
@@ -28,15 +28,16 @@ jobs:
           tag_name: ${{ steps.commitizen.outputs.version }}
         env:
           GITHUB_TOKEN: ${{ github.token }}
+      - uses: actions/checkout@v4
+        with:
+          ref: develop
+          fetch-depth: 0 # required to get tags
       - name: Backmerge to develop
         shell: bash
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "noreply@mercedes-benz.com"
-          git checkout develop
-          git pull
           git merge ${{ steps.commitizen.outputs.version }} -X ours --no-ff
-          sudo chmod -R ugo+rwX .
           git push
         env:
           GH_TOKEN: ${{ github.token }}
