--- a/.github/workflows/release-candidate.yml
+++ b/.github/workflows/release-candidate.yml
@@ -1,12 +1,10 @@
-name: Release Candidate
+name: Release Candidate 
 
 on:
   workflow_dispatch:
-  pull_request:
+  push:
     branches:
-      - releases/**
-    types:
-      - synchronize
+      - release/*
 
 permissions:
   contents: write
@@ -63,9 +61,15 @@ jobs:
           fi
         env:
           GH_TOKEN: ${{ github.token }}
+      
+      - name: Debug variables
+        shell: brash
+        run: |
+          echo "${{ github.head_ref }}"
+          
 
       - name: Update PR Body
-        if: github.event_name == 'pull_request' && github.event.action == 'synchronize'
+        if: github.event_name == 'push'
         uses: actions/github-script@v6
         with:
           github-token: ${{ github.token }}
@@ -73,13 +77,28 @@ jobs:
             const fs = require('fs');
             const body = fs.readFileSync('body.md', 'utf8');
 
-            const prNumber = context.payload.pull_request.number;
+            const branchName = process.env.GITHUB_REF.replace('refs/heads/', '');
+            console.log("branch name:", branchName)
             const owner = context.repo.owner;
             const repo = context.repo.repo;
 
-            await github.rest.pulls.update({
-              owner: owner,
-              repo: repo,
-              pull_number: prNumber,
-              body: body,
+            // Find open PRs from this branch
+            const { data: prs } = await github.rest.pulls.list({
+              owner,
+              repo,
+              state: 'open',
+              head: `${owner}:${branchName}`,
             });
+
+            if (prs.length > 0) {
+              const prNumber = prs[0].number;
+
+              await github.rest.pulls.update({
+                owner,
+                repo,
+                pull_number: prNumber,
+                body: body,
+              });
+            } else {
+              console.log(`No open PR found for branch ${branchName}`);
+            }
