--- a/.github/workflows/release-candidate.yml
+++ b/.github/workflows/release-candidate.yml
@@ -24,6 +24,8 @@ jobs:
       - name: Checkout code for pull_request
         if: github.event_name == 'push'
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
       - name: Check tags
         shell: bash
