--- a/cz.yaml
+++ b/cz.yaml
@@ -1,7 +1,8 @@
 ---
 commitizen:
+  bump_message: "chore: release $current_version \u2192 $new_version"
   major_version_zero: true
   name: cz_conventional_commits
   tag_format: $version
-  version: 0.11.0
+  version: 1.0.0
   version_scheme: semver
