--- a/.github/workflows/release-candidate.yml
+++ b/.github/workflows/release-candidate.yml
@@ -20,6 +20,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           ref: develop
+          fetch-depth: 0
 
       - name: Checkout code for pull_request
         if: github.event_name == 'push'
