--- a/.github/workflows/release-candidate.yml
+++ b/.github/workflows/release-candidate.yml
@@ -22,15 +22,11 @@ jobs:
           ref: develop
           fetch-depth: 0
 
-      - name: Checkout code for pull_request
+      - name: Checkout code for push
         if: github.event_name == 'push'
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-
-      - name: Check tags
-        shell: bash
-        run: git fetch origin --tags
 
       - name: Calculate version bump
         id: commitizen
@@ -65,7 +61,7 @@ jobs:
 
       - name: Update PR Body
         if: github.event_name == 'push'
-        uses: actions/github-script@v6
+        uses: actions/github-script@v7
         with:
           github-token: ${{ github.token }}
           script: |
