--- a/cz.yaml
+++ b/cz.yaml
@@ -3,6 +3,6 @@ commitizen:
   bump_message: "chore: release $current_version \u2192 $new_version"
   name: cz_conventional_commits
   tag_format: $version
-  template: ./.cz/CHANGELOG.md.j2
+  template: config/CHANGELOG.md.j2
   version: 1.2.0
   version_scheme: semver
