--- a/.github/workflows/github-release.yml
+++ b/.github/workflows/github-release.yml
@@ -5,9 +5,6 @@ on:
     branches:
       - master
 
-permissions:
-  contents: write
-
 jobs:
   create-release:
     runs-on: ubuntu-latest
@@ -15,11 +12,12 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0 # required to get tags
+          token: ${{ secrets.GH_PAT }}
       - name: Calculate version bump
         id: commitizen
         uses: commitizen-tools/commitizen-action@master
         with:
-          github_token: ${{ github.token }}
+          github_token: ${{ secrets.GH_PAT }}
           changelog_increment_filename: body.md
       - name: Release
         uses: softprops/action-gh-release@v2
@@ -27,11 +25,12 @@ jobs:
           body_path: "body.md"
           tag_name: ${{ steps.commitizen.outputs.version }}
         env:
-          GITHUB_TOKEN: ${{ github.token }}
+          GITHUB_TOKEN: ${{ secrets.GH_PAT }}
       - uses: actions/checkout@v4
         with:
           ref: develop
           fetch-depth: 0 # required to get tags
+          token: ${{ secrets.GH_PAT }}
       - name: Backmerge to develop
         shell: bash
         run: |
@@ -40,4 +39,4 @@ jobs:
           git merge ${{ steps.commitizen.outputs.version }} -X ours
           git push
         env:
-          GH_TOKEN: ${{ github.token }}
+          GH_TOKEN: ${{ secrets.GH_PAT }}
