--- a/.github/workflows/release-candidate.yml
+++ b/.github/workflows/release-candidate.yml
@@ -21,12 +21,14 @@ jobs:
         with:
           ref: develop
           fetch-depth: 0
+          token: ${{ secrets.GH_PAT }}
 
       - name: Checkout code for push
         if: github.event_name == 'push'
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+          token: ${{ secrets.GH_PAT }}
 
       - name: Calculate version bump
         id: commitizen
@@ -57,13 +59,13 @@ jobs:
               --label release
           fi
         env:
-          GH_TOKEN: ${{ github.token }}
+          GH_TOKEN: ${{ secrets.GH_PAT }}
 
       - name: Update PR Body
         if: github.event_name == 'push'
         uses: actions/github-script@v7
         with:
-          github-token: ${{ github.token }}
+          github-token: ${{ secrets.GH_PAT }}
           script: |
             const fs = require('fs');
             const body = fs.readFileSync('body.md', 'utf8');
