--- a/cz.yaml
+++ b/cz.yaml
@@ -1,6 +1,6 @@
 ---
 commitizen:
-  bump_message: "chore: release $current_version \u2192 $new_version"
+  bump_message: "chore: release $current_version \u2192 $new_version [skip ci]"
   name: cz_conventional_commits
   tag_format: $version
   template: config/CHANGELOG.md.j2
