--- a/.github/workflows/release-candidate.yml
+++ b/.github/workflows/release-candidate.yml
@@ -88,7 +88,7 @@ jobs:
 
             if (prs.length > 0) {
               const prNumber = prs[0].number;
-              const updatedBody = existingBody + warningMessage;
+              const updatedBody = body + warningMessage;
 
               await github.rest.pulls.update({
                 owner,
