refactor: improve stuff

--- a/.github/workflows/release-candidate.yml
+++ b/.github/workflows/release-candidate.yml
@@ -60,7 +60,17 @@ jobs:
           fi
         env:
           GH_TOKEN: ${{ secrets.GH_PAT }}
-
+      
+      - name: Add PR body disclaimer
+        shell: bash
+        run: |
+          cat <<EOF >> body.md
+        
+          ## ⚠️ Important
+          
+          **Please use the \`Create a merge commit\` option** when merging this pull request. This helps maintain a clean and consistent commit history, ensuring the integrity of our project.
+          EOF
+        
       - name: Update PR Body
         if: github.event_name == 'push'
         uses: actions/github-script@v7
@@ -69,10 +79,6 @@ jobs:
           script: |
             const fs = require('fs');
             const body = fs.readFileSync('body.md', 'utf8');
-            const warningMessage = `
-
-            ⚠️ Please use \`Create a merge commit\` button. This is very important to maintain commit history integrity.
-            `;
 
             const branchName = process.env.GITHUB_REF.replace('refs/heads/', '');
             const owner = context.repo.owner;
@@ -88,13 +94,12 @@ jobs:
 
             if (prs.length > 0) {
               const prNumber = prs[0].number;
-              const updatedBody = body + warningMessage;
 
               await github.rest.pulls.update({
                 owner,
                 repo,
                 pull_number: prNumber,
-                body: updatedBody,
+                body: body,
               });
             } else {
               console.log(`No open PR found for branch ${branchName}`);
